# libCC

./: CMakeLists.txt  LICENSE  NOTICE  README.md
cmake/: TODO
doc/: emscriptenTips.txt
include/: CC.h
include/game/: Game.h  GameSetupFactory.h  ILowLevelGameSetup.h  IUpdateable.h  Updater.h
include/graphics/: Graphics.h  GraphicsTypes.h  ILowLevelGraphics.h  IShaderProgram.h  IVertexBuffer.h
include/impl/: KeyboardGLFW.h  LowLevelGameSetupEmsc.h  LowLevelGameSetupLinux.h  LowLevelGameSetupWindows.h  LowLevelGraphicsGLFW.h  LowLevelInputGLFW.h  LowLevelSystemEmsc.h  LowLevelSystemLinux.h  LowLevelSystemWindows.h  ShaderProgramGL.h  VertexBufferVBO.h
include/input/: ActionKeyboard.h  IAction.h  IInputDevice.h  IKeyboard.h  ILowLevelInput.h  Input.h  InputTypes.h
include/math/: MathTypes.h  Matrix.h  Vector3.h
include/system/: ILowLevelSystem.h  System.h
sources/game/: Game.cc  GameSetupFactory.cc  Updater.cc
sources/graphics/: Graphics.cc
sources/impl/: KeyboardGLFW.cc  LowLevelGameSetupEmsc.cc  LowLevelGameSetupLinux.cc  LowLevelGameSetupWindows.cc  LowLevelGraphicsGLFW.cc  LowLevelInputGLFW.cc  LowLevelSystemEmsc.cc  LowLevelSystemLinux.cc  LowLevelSystemWindows.cc  ShaderProgramGL.cc  VertexBufferVBO.cc
sources/input/: ActionKeyboard.cc  IAction.cc  Input.cc
sources/system/: System.cc
tests/: README.md
tests/RenderTest/: CMakeLists.txt  RenderTest.cc
tests/SystemTest/: CMakeLists.txt  SystemTest.cc
